

You should keep two lines between each date.
TAG is optional. If your changes fix a bug listed in the Geant4 Bugzilla,
add this in the documentation for the changed file as [BUGFIX #BUGNUMBER].


     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *

     ----------------------------------------------------------
22nd October 2014 - Gunter Folger (cmake-V10-00-28)
- Modules/Geant4DatasetDefinitions.cmake: G4EMLOW.6.41

21st October 2014 - Ben Morgan (cmake-V10-00-27)
- Modules/Geant4ConfigureModulefile.cmake : New file to configure
  and install a basic Environment Modules modulefile for Geant4.
  Provides basic Path/Datapath settings only, in line with geant4.(c)sh
  scripts. Because the location of modulefiles can be highly system
  dependent, install file in datarootdir with absolute paths coded in.
  Allows file to be moved later on as required on the system and
  patched accordingly.
- Templates/geant4-modulefile.in : basic template for a modulefile
- Modules/Geant4ToolchainBackwardCompatibility.cmake : include and
  call functionality in Geant4ConfigureModulefile.

20th October 2014 - Ben Morgan
- Modules/Geant4ToolchainBackwardCompatibility.cmake,
  Templates/geant4make-skeleton.in: Revert changes introduced to 
  support modulefiles due to uneeded variables being exported.

10th October 2014 - Andrea Dotti (cmake-V10-00-26)
- Modules/FindROOT.cmake add ROOT_BIN_DIR variable to point to the
  path of root executables. Needed to use hadd application for
  physics testings (merging of output files for MT) 

08th October 2014 - Ben Morgan (cmake-V10-00-25)
- Templates/UseGeant4.cmake : BUGFIX #1663, Append existing CMake 
  CXX/EXE_LINKER flags to Geant4 flags when setting overall CMake flags.
  This allows users to override the base set if needed, at their own
  risk.

26th September 2014 - Ben Morgan (cmake-V10-00-24)
- Modules/Geant4ToolchainBackwardCompatibility.cmake,